[package]
name = "rust-web-framework-comparison"
authors = ["Markus Kohlhase"]
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
pad = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
tera = { version = "1", default-features = false }
url = { version = "2", features = ["serde"] }
