[package]
name = "rust-web-framework-comparison"
authors = ["Markus Kohlhase"]
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
env_logger = "0.11"
log = "0.4"
pad = "0.1"
serde = { version = "1", features = ["derive"] }
tera = { version = "1", default-features = false }
toml = "0.8"
url = { version = "2", features = ["serde"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "blocking", "json"]

[dependencies.crates_io_api]
version = "0.11"
default-features = false
features = ["rustls"]
